# red_line

./: Cargo.toml  README.md  notes.md  todo.txt
.github/workflows/: ci.yml
src/: engine.rs  line_buffer.rs  main.rs
